# wass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/src/: Makefile  cmake_install.cmake
docs/: Design.dot
src/: CMakeLists.txt
src/exec/: CommandLine.cpp  CommandLine.hpp  wass.cpp
src/include/: BinaryCode.hpp  Error.hpp  Util.hpp
src/include/codegen/: CodeGenVisitor.hpp  SectionGenerator.hpp
src/include/parser/: Comment.hpp  FloatLiteral.hpp  GetInstr.hpp  Identifier.hpp  IntegerLiteral.hpp  Literal.hpp  Name.hpp  Parser.hpp  ParserBlockedInstr.hpp  ParserConstExpr.hpp  ParserConstInstr.hpp  ParserContext.hpp  ParserControlInstr.hpp  ParserData.hpp  ParserElement.hpp  ParserExport.hpp  ParserFoldedInstr.hpp  ParserFuncType.hpp  ParserFunction.hpp  ParserGlobal.hpp  ParserGlobalType.hpp  ParserImport.hpp  ParserIndex.hpp  ParserInstance.hpp  ParserInstructions.hpp  ParserLimit.hpp  ParserMemory.hpp  ParserMemoryInstr.hpp  ParserModule.hpp  ParserNumericInstr.hpp  ParserParam.hpp  ParserParamInstr.hpp  ParserResult.hpp  ParserStart.hpp  ParserTable.hpp  ParserTableType.hpp  ParserType.hpp  ParserTypeUse.hpp  ParserValue.hpp  ParserValueType.hpp  (+2 more)
src/include/structure/: BaseInstr.hpp  BlockedInstr.hpp  ConstInstr.hpp  ControlInstr.hpp  Data.hpp  Element.hpp  Export.hpp  FuncType.hpp  Function.hpp  Global.hpp  GlobalType.hpp  Import.hpp  Index.hpp  Instr.hpp  InstrVariant.hpp  Limit.hpp  Memory.hpp  MemoryInstr.hpp  Module.hpp  NumericInstr.hpp  ParamInstr.hpp  Table.hpp  Type.hpp  TypeUse.hpp  Value.hpp  ValueType.hpp  VariableInstr.hpp
src/lib/: BinaryCode.cpp  Error.cpp  Util.cpp
src/lib/codegen/: CMakeLists.txt  CodeGenVisitor.cpp  GenConstInstr.cpp  GenControlInstr.cpp  GenData.cpp  GenElement.cpp  GenExport.cpp  GenFuncType.cpp  GenFunction.cpp  GenFunctionContent.cpp  GenGlobal.cpp  GenGlobalType.cpp  GenImport.cpp  GenIndex.cpp  GenLimit.cpp  GenMemory.cpp  GenMemoryInstr.cpp  GenModule.cpp  GenNumericInstr.cpp  GenParamInstr.cpp  GenTable.cpp  GenType.cpp  GenTypeUse.cpp  GenValueType.cpp  GenVariableInstr.cpp  SectionGenerator.cpp
src/lib/parser/: CMakeLists.txt  Comment.cpp  FloatLiteral.cpp  GetInstr.cpp  Identifier.cpp  IntegerLiteral.cpp  Literal.cpp  Name.cpp  Parser.cpp  ParserBlockedInstr.cpp  ParserConstInstr.cpp  ParserContext.cpp  ParserControlInstr.cpp  ParserData.cpp  ParserElement.cpp  ParserExport.cpp  ParserFuncType.cpp  ParserFunction.cpp  ParserGlobal.cpp  ParserGlobalType.cpp  ParserImport.cpp  ParserIndex.cpp  ParserInstance.cpp  ParserInstructions.cpp  ParserLimit.cpp  ParserMemory.cpp  ParserMemoryInstr.cpp  ParserModule.cpp  ParserNumericInstr.cpp  ParserParam.cpp  ParserParamInstr.cpp  ParserResult.cpp  ParserStart.cpp  ParserTable.cpp  ParserTableType.cpp  ParserType.cpp  ParserTypeUse.cpp  ParserValue.cpp  ParserValueType.cpp  ParserVariableInstr.cpp  (+5 more)
src/lib/structure/: ConstInstr.cpp  ControlInstr.cpp  FuncType.cpp  Function.cpp  GlobalType.cpp  Limit.cpp  TypeUse.cpp  Value.cpp
test/regression/: CMakeLists.txt  run_test.sh
test/regression/malformed/address/: test_module_1_malformed.wat
test/regression/malformed/align/: test_module_23_malformed.wat  test_module_24_malformed.wat  test_module_25_malformed.wat  test_module_26_malformed.wat  test_module_27_malformed.wat  test_module_28_malformed.wat  test_module_29_malformed.wat  test_module_30_malformed.wat  test_module_31_malformed.wat  test_module_32_malformed.wat  test_module_33_malformed.wat  test_module_34_malformed.wat  test_module_35_malformed.wat  test_module_36_malformed.wat  test_module_37_malformed.wat  test_module_38_malformed.wat  test_module_39_malformed.wat  test_module_40_malformed.wat  test_module_41_malformed.wat  test_module_42_malformed.wat  test_module_43_malformed.wat  test_module_44_malformed.wat  test_module_45_malformed.wat  test_module_46_malformed.wat  test_module_47_malformed.wat  test_module_48_malformed.wat  test_module_49_malformed.wat  test_module_50_malformed.wat  test_module_51_malformed.wat  test_module_52_malformed.wat  test_module_53_malformed.wat  test_module_54_malformed.wat  test_module_55_malformed.wat  test_module_56_malformed.wat  test_module_57_malformed.wat  test_module_58_malformed.wat  test_module_59_malformed.wat  test_module_60_malformed.wat  (+8 more)
test/unittests/: CMakeLists.txt  Helper.cpp  Helper.hpp  Util.cpp  Util.hpp
test/unittests/exec/: CMakeLists.txt  test_CommandLine.cpp
test/unittests/lib/: CMakeLists.txt
test/unittests/lib/codegen/: CMakeLists.txt  test_GenConstInstr.cpp  test_GenControlInstr.cpp  test_GenData.cpp  test_GenElement.cpp  test_GenExport.cpp  test_GenFuncType.cpp  test_GenFunction.cpp  test_GenFunctionContent.cpp  test_GenGlobal.cpp  test_GenGlobalType.cpp  test_GenImport.cpp  test_GenLimit.cpp  test_GenMemory.cpp  test_GenMemoryInstr.cpp  test_GenModule.cpp  test_GenNumericInstr.cpp  test_GenParamInstr.cpp  test_GenTable.cpp  test_GenType.cpp  test_GenTypeUse.cpp  test_GenValueType.cpp  test_GenVariableInstr.cpp
test/unittests/lib/parser/: CMakeLists.txt  test_Comment.cpp  test_FloatLiteral.cpp  test_Identifier.cpp  test_IntegerLiteral.cpp  test_Literal_integer.cpp  test_Name.cpp  test_ParserBlockedInstr.cpp  test_ParserConstInstr.cpp  test_ParserControlInstr.cpp  test_ParserData.cpp  test_ParserElement.cpp  test_ParserExport.cpp  test_ParserFuncType.cpp  test_ParserFunction.cpp  test_ParserGlobal.cpp  test_ParserGlobalType.cpp  test_ParserImport.cpp  test_ParserIndex.cpp  test_ParserInstructions.cpp  test_ParserLimit.cpp  test_ParserMemory.cpp  test_ParserMemoryInstr.cpp  test_ParserModule.cpp  test_ParserNumericInstr.cpp  test_ParserParam.cpp  test_ParserParamInstr.cpp  test_ParserResult.cpp  test_ParserStart.cpp  test_ParserTable.cpp  test_ParserTableType.cpp  test_ParserType.cpp  test_ParserTypeUse.cpp  test_ParserValue.cpp  test_ParserVariableInstr.cpp  test_StringLiteral.cpp
test/unittests/lib/structure/: CMakeLists.txt  test_FuncType.cpp  test_GlobalType.cpp  test_Limit.cpp  test_Value.cpp
(+1069 files in other folders)
