include_directories(${CMAKE_CURRENT_LIST_DIR}/include)

add_library(wass-parser
  lib/parser/ParserContext.cpp
  lib/parser/Comment.cpp
  lib/parser/IntegerLiteral.cpp
  lib/parser/FloatLiteral.cpp
  lib/parser/StringLiteral.cpp
  lib/parser/Name.cpp
  lib/parser/Identifier.cpp
  lib/parser/ParserValueType.cpp
  lib/parser/ParserParam.cpp
  lib/parser/ParserResult.cpp
  lib/parser/ParserFuncType.cpp
  lib/parser/ParserLimit.cpp
  lib/parser/ParserTableType.cpp
  lib/parser/ParserGlobalType.cpp
  lib/parser/ParserNumericInstr.cpp
  lib/parser/ParserConstInstr.cpp
  lib/parser/ParserParamInstr.cpp
  lib/parser/ParserVariableInstr.cpp
  lib/parser/ParserMemoryInstr.cpp
  lib/parser/ParserControlInstr.cpp
  lib/parser/ParserTypeUse.cpp
  lib/parser/ParserInstructions.cpp
  lib/parser/ParserType.cpp
  lib/parser/ParserImport.cpp
  lib/parser/ParserFunction.cpp
  lib/parser/ParserTable.cpp
  lib/parser/ParserMemory.cpp
)

add_library(wass-core
  lib/Error.cpp
  lib/Util.cpp
  lib/structure/Limit.cpp
  lib/structure/Value.cpp
  lib/structure/FuncType.cpp
  lib/structure/GlobalType.cpp
  lib/structure/ControlInstr.cpp
  lib/structure/TypeUse.cpp
)