add_library(wass-codegen
  SectionGenerator.cpp
  CodeGenVisitor.cpp
  GenModule.cpp
  GenFuncType.cpp
  GenType.cpp
  GenValueType.cpp
  GenTypeUse.cpp
  GenImport.cpp
  GenLimit.cpp
  GenGlobalType.cpp
  GenFunction.cpp
  GenTable.cpp
  GenMemory.cpp
  GenGlobal.cpp
  GenConstInstr.cpp
  GenVariableInstr.cpp
  GenIndex.cpp
  GenExport.cpp
)