add_library(wass-parser
  ParserContext.cpp
  Comment.cpp
  IntegerLiteral.cpp
  FloatLiteral.cpp
  StringLiteral.cpp
  Name.cpp
  Identifier.cpp
  ParserValueType.cpp
  ParserParam.cpp
  ParserResult.cpp
  ParserFuncType.cpp
  ParserLimit.cpp
  ParserTableType.cpp
  ParserGlobalType.cpp
  ParserNumericInstr.cpp
  ParserConstInstr.cpp
  ParserParamInstr.cpp
  ParserVariableInstr.cpp
  ParserMemoryInstr.cpp
  ParserControlInstr.cpp
  ParserTypeUse.cpp
  ParserBlockedInstr.cpp
  ParserType.cpp
  ParserImport.cpp
  ParserFunction.cpp
  ParserTable.cpp
  ParserMemory.cpp
  ParserGlobal.cpp
  GetInstr.cpp
  ParserExport.cpp
  ParserStart.cpp
  ParserElement.cpp
  ParserData.cpp
  ParserModule.cpp
  _Abbreviated.cpp
  _AssignConstExprVisitor.cpp
)