add_executable(test_codegen
  test_GenModule.cpp
  test_GenFuncType.cpp
  test_GenValueType.cpp
  test_GenType.cpp
  test_GenTypeUse.cpp
  test_GenImport.cpp
  test_GenLimit.cpp
  test_GenGlobalType.cpp
  test_GenFunction.cpp
  test_GenTable.cpp
  test_GenMemory.cpp
  test_GenConstInstr.cpp
  test_GenVariableInstr.cpp
  test_GenGlobal.cpp
  test_GenExport.cpp
  test_GenElement.cpp
  test_GenFunctionContent.cpp
  test_GenNumericInstr.cpp
  test_GenParamInstr.cpp
  test_GenMemoryInstr.cpp
)
add_dependencies(test_codegen
  googletest
)

target_link_libraries(test_codegen
  wass-codegen
  wass-core
  gtest
  gtest_main
  pthread
  unittest_helper
)
gtest_discover_tests(test_codegen)