add_executable(test_parser
  test_Comment.cpp
  test_IntegerLiteral.cpp
  test_FloatLiteral.cpp
  test_StringLiteral.cpp
  test_Name.cpp
  test_Identifier.cpp
  test_ParserValue.cpp
  test_ParserParam.cpp
  test_ParserResult.cpp
  test_ParserFuncType.cpp
  test_ParserLimit.cpp
  test_ParserTableType.cpp
  test_ParserGlobalType.cpp
  test_ParserNumericInstr.cpp
  test_ParserConstInstr.cpp
  test_ParserParamInstr.cpp
  test_ParserVariableInstr.cpp
  test_ParserMemoryInstr.cpp
  test_ParserControlInstr.cpp
  test_ParserTypeUse.cpp
  test_ParserBlockedInstr.cpp
  test_ParserType.cpp
  test_ParserImport.cpp
  test_ParserFunction.cpp
  test_ParserTable.cpp
  test_ParserMemory.cpp
  test_ParserGlobal.cpp
  test_ParserExport.cpp
  test_ParserStart.cpp
  test_ParserElement.cpp
  test_ParserData.cpp
  test_ParserModule.cpp
  test_ParserIndex.cpp
)
add_dependencies(test_parser
  googletest
)
target_link_libraries(test_parser
  wass-parser
  wass-core
  gtest
  gtest_main
  pthread
  unittest_helper
)
gtest_discover_tests(test_parser)